--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,5 @@
 name = "dumbmath"
 version = "0.0.1"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
+readme = "README.md"
+license = "Apache-2.0"
