--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ env:
 language: rust
 
 after_script:
-  - make doc
+  - cargo doc
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
