--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ language: rust
 after_script:
   - cargo doc
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+  - ln -s target/doc doc
