--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "dumbmath"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 description = "A pretty dumb math library oriented towards computer graphics"
-homepage = "https://github.com/nicholasbishop/dumbmath-rs"
+documentation = "http://nicholasbishop.github.io/dumbmath-rs/doc/dumbmath"
 keywords = ["aabb", "graphics", "intersection", "math", "vector"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/nicholasbishop/dumbmath-rs"
-version = "0.0.1"
+version = "0.0.2"
