Add 2d and 3d to keywords list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "dumbmath"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 description = "A pretty dumb math library oriented towards computer graphics"
 documentation = "http://nicholasbishop.github.io/dumbmath-rs/doc/dumbmath"
-keywords = ["aabb", "graphics", "intersection", "math", "vector"]
+keywords = ["2d", "3d", "aabb", "graphics", "intersection", "math", "vector"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/nicholasbishop/dumbmath-rs"
